testlog/matrix.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: matrix
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: matrix
    spec:
      containers:
      - name: matrix
        image: matrix:0.1
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    # For use as a Cluster add-on (https://github.com/kubernetes/kubernetes/tree/master/cluster/addons)
    # If you are NOT using this as an addon, you should comment out this line.
    kubernetes.io/cluster-service: 'true'
    kubernetes.io/name: matrix
  name: matrix
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30133
  selector:
    k8s-app: matrix
# ---
# apiVersion: v1
# kind: ServiceAccount
# metadata:
#   name: matrix
# namespace: default
