testlog/metrics-kube.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    k8s-app: metrics-server
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  template:
    metadata:
      name: metrics-server
      labels:
        k8s-app: metrics-server
    spec:
      serviceAccountName: metrics-server
      containers:
      - name: metrics-server
        image: radishgz/metrics-server-amd64:latest
        imagePullPolicy: IfNotPresent
        command:
        - /metrics-server
        - --source=kubernetes.summary_api:''
---
apiVersion: v1
kind: Service
metadata:
  name: metrics-server
  namespace: kube-system
  labels:
    kubernetes.io/name: "Metrics-server"
spec:
  selector:
    k8s-app: metrics-server
  type: NodePort    
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
    nodePort: 30131
